--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "pug": "^2.0.4",
     "sequelize": "^6.3.5",
     "sha256": "^0.2.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.6.6"
   }
 }
